--- a/src/index.htm
+++ b/src/index.htm
@@ -2,14 +2,14 @@
 <html lang="en-US">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Coding Template</title>
+  <title>Collapsible List, REST data</title>
   <link rel="stylesheet" type="text/css" href="bundle.css">
 </head>
 
 <body>
-  <h1>Webpack - TypeScript - Scss</h1>
-  <h2>TypeScript Hello World</h2>  
-  <div id="content"></div>
+  <h1>Collapsible List, REST data</h1>
+ 
+  <div id="placeholder"></div>
     
   <script src="bundle.js"></script>
 </body>
